--- a/job-hunting-management-app/app/views/layouts/application.html.erb
+++ b/job-hunting-management-app/app/views/layouts/application.html.erb
@@ -21,7 +21,22 @@
     <%= stylesheet_link_tag :app, "data-turbo-track": "reload" %>
   </head>
 
+  <head>
+    <title><%= full_title(yield(:title)) %></title>
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1"
+    >
+    <meta charset="utf-8">
+    <%= csrf_meta_tags %>
+    <%= csp_meta_tag %>
+    <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
+    <%= javascript_importmap_tags %>
+  </head>
   <body>
-    <%= yield %>
+    <%= render 'layouts/header' %>
+    <div class="container">
+      <%= yield %>
+    </div>
   </body>
 </html>
